hopefully fixed jumpiness with header

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -235,7 +235,8 @@ nav, .navbar {
 					}	
 				}
 				li#header-link-account {
-					min-width: 59;
+					min-width: 79px;
+					padding-left: 0;
 					margin-top:-10px;
 					padding:8px;
 					a {
